networking/ingress/test.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  name: test-service
  namespace: ingress-example
spec:
  externalTrafficPolicy: Local
  ports:
    - port: 8080
      protocol: TCP
      name: test
  selector:
    run: echoserver
  sessionAffinity: None
  type: LoadBalancer
