networking/ingress/02-vhost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vhost-ingress
  namespace: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
  - host: kubernetes.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: echoserver
            port:
              number: 8080
