networking/ingress/03-fanout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
  namespace: ingress-example
spec:
  defaultBackend:  
    service:
      name: echoserver
      port:
        number: 8080
